Rahti2/InfluxDB/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2.7.11
        ports:
        - containerPort: 8086 
        livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8086
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
        readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8086
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        volumeMounts:
        -  name: influxdb-storage
           mountPath: /var/lib/influxdb2
        -  name: influxdb-config
           mountPath: /etc/influxdb2
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
          claimName: influxdb-pvc
      - name: influxdb-config
        persistentVolumeClaim:
          claimName: influxdb-config-pvc
