Rahti2/InfluxDB/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetport: 8086
